--- a/main_page.html
+++ b/main_page.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Scss/sass.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="hero">
+        <nav class="hero-navbar">
+
+        </nav>
+        <div class="hero-text">
+
+        </div>
+        <div class="hero-subtext">
+
+        </div>
+        <div class="hero-footer">
+
+        </div>
+    </section>
 </body>
 </html>
