--- a/main_page.html
+++ b/main_page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Scss/sass.css">
     <title>Document</title>
@@ -12,16 +13,45 @@
 <body>
     <section class="hero">
         <nav class="hero-navbar">
-
+            <div class="hero-navigation-logo"><img src="./assets/logo.png" alt="" class="hero-logo"></div>
+            <div class="hero-navigation">
+                <ul class="hero-nav-links" id="hero-nav-links">
+                    <li><a href="#">О Компании</a></li>
+                    <li><a href="#">Контрактное производство</a></li>
+                    <li><a href="#">Собственные торговые марки</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </div> 
+            <!--This is burger menu-->
+            <div class="hero-burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="hero-navigation">
+                <i class="fa-solid fa-phone"></i>
+                <a href="#" class="hero-call">+7 (499) 686-10-14</a>
+                <h5 class="hero-navigation-btn"><a href="#">Получить консультацию</a></h5>
+            </div>
         </nav>
-        <div class="hero-text">
+        <div class="hero-main">
+            <div class="container">
+                <div class="hero-text-hr">
+                    
+                </div> 
+                <div class="hero-text">
+                    <span class="hero-main-text">Комплексное обеспечение товарами <br />и расходными материалами бизнеса</span>
+                    <span class="hero-subtext">
+                        Высокий уровень вовлечения представителей целевой аудитории является четким <br />
+                        доказательством простого факта: высококачественный прототип будущего проекта <br />
+                        напрямую зависит от анализа существующих паттернов поведения.
+                    </span>
+                </div>
+                <div class="hero-footer">
 
-        </div>
-        <div class="hero-subtext">
-
-        </div>
-        <div class="hero-footer">
-
+                </div>
+            </div>
         </div>
     </section>
 </body>
