created hero page and added links about company

--- a/main_page.html
+++ b/main_page.html
@@ -48,8 +48,30 @@
                         напрямую зависит от анализа существующих паттернов поведения.
                     </span>
                 </div>
+                <div class="hero-about-company">
+                    <button class="hero-btn" type="button"><a href="#">Подробнее о компании</a></button>
+                </div>
                 <div class="hero-footer">
-
+                    <div class="hero-footer-elements">
+                        <i class="fa fa-hourglass" aria-hidden="true"></i><br/>
+                        <span class="hero-footer-text">Непрерывная работа c <br />2017 года</span>
+                    </div>
+                    <div class="hero-footer-elements">
+                        <i class="fa fa-file-text" aria-hidden="true"></i><br/>
+                        <span class="hero-footer-text">Вся продукция <br />сертифицирована</span>
+                    </div>
+                    <div class="hero-footer-elements">
+                        <i class="fa fa-user" aria-hidden="true"></i><br/>
+                        <span class="hero-footer-text">Контроль качества <br />на всех этапах</span>
+                    </div>
+                    <div class="hero-footer-elements">
+                        <i class="fa fa-truck" aria-hidden="true"></i><br/>
+                        <span class="hero-footer-text">Возможны поставки <br />по всей России</span>
+                    </div>
+                    <div class="hero-footer-elements">
+                        <i class="fa fa-tachometer" aria-hidden="true"></i><br/>
+                        <span class="hero-footer-text">Оперативное <br />производство</span>
+                    </div>
                 </div>
             </div>
         </div>
