--- a/main_page.html
+++ b/main_page.html
@@ -269,6 +269,123 @@
             </div>
         </div>
     </section>
+    <section class="blog">
+        <div class="container">
+            <span class="blog-span"></span>
+            <h2 class="blog-text">БЛОГ ЭКСПЕРТОВ В ОБЛАСТИ ПРОИЗВОДСТВА</h2>
+            <div class="blog-sides">
+                <div class="blog-left-side">
+                    <h3 class="blog-left-text">Современная методология разработки <br />одухотворила всех причастных</h3>
+                    <p class="blog-left-subtext">
+                        Действия представителей оппозиции, превозмогая сложившуюся<br />
+                        непростую экономическую ситуацию, в равной степени предоставлены...
+                    </p>
+                </div>
+                <div class="blog-right-side">
+                    <h3 class="blog-right-text">Сложно сказать, почему жизнь прекрасна</h3>
+                    <p class="blog-right-subtext">
+                        Сложно сказать, почему элементы политического процесса функционально<br />
+                        разнесены на независимые элементы. Безусловно, высокотехнологичная...
+                    </p>
+                </div>
+            </div>
+            <div class="blog-footer-elements">
+                <a class="blog-footer-link" href="#">Весь блог</a>
+                <div class="blog-footer-btn">
+                    <a class="blog-footer-previous" href="#"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
+                    <a href="#" class="blog-footer-next"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="offer">
+        <div class="offer-spray-img">
+            <img src="./assets/spray.png" alt="">
+        </div>
+        <div class="offer-container">
+            <div class="offer-form">
+            <h2 class="offer-text">ХОТИТЕ СОТРУДНИЧАТЬ?</h2>
+            <p class="offer-subtext">
+                Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит<br />
+                на все интересующие вопросы и поможем даже в самых сложных случаях!
+            </p>
+            <input class="offer-input-text" placeholder="Имя" type="text">
+            <input class="offer-input-phone" type="number" name="phone" id="phone" placeholder="+_ (___) __-__-___"><br />
+            <div class="offer-verify">
+                <button class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
+                <span class="offer-verify-text">
+                    <img class="offer-verifie-icon" src="./assets/verified.png" alt="">
+                    Обращаясь к нам вы получаете не только профессиональную<br />
+                    работу, но и абсолютную конфиденциальность информации!
+                </span>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <ul class="footer-ul">
+                <li class="footer-list-item">
+                    <img src="./assets/footer-header-logo.png" alt="">
+                </li>
+                <li class="footer-list-item">
+                    <span class="footer-phone-contact">+7 (499) 686-10-14</span>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-addres"><i class="fa-solid fa-location-dot"></i> г. Мосвка, Холодильный пер. 4к1с8</p>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-email-addres"><i class="fa-solid fa-envelope"></i> a.dragunov@tdaliance.ru</p>
+                </li>
+                <li class="footer-list-item">
+                    <i class="fa-brands fa-vk"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </li>
+            </ul>
+        </div>
+        <hr class="footer-hr">
+        <div class="container">
+            <div class="footer-main">
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item"><span class="footer-main-col1">Контрактное производство</span></li>
+                        <li class="footer-main-list-item">Автомобильная химия</li>
+                        <li class="footer-main-list-item">Бытовая химия</li>
+                        <li class="footer-main-list-item">Дезинфицирующие средства</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item">Пищевые аэрозоли</li>
+                        <li class="footer-main-list-item">Косметическая продукция</li>
+                        <li class="footer-main-list-item">Краски аэрозольные</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item"><span class="footer-main-col2">Собственные марки</span></li>
+                        <li class="footer-main-list-item">Автохимия AG-Tech</li>
+                        <li class="footer-main-list-item">Автохимия AP</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item"><span class="footer-main-col2"><span class="footer-main-spans">О компании</span></span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-spans">Новости</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-spans">Контакты</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="footer-hr">
+        <div class="footer-last">
+            <div class="footer-last-info">
+                <span class="footer-last-span1"></span>
+                <span class="footer-last-span2"></span>
+            </div>
+            <div class="footer-last-logo"></div>
+        </div>
+    </section>
 </body>
 <script>
     const images = document.querySelectorAll('.hover-img');
