finished home page

--- a/main_page.html
+++ b/main_page.html
@@ -338,8 +338,8 @@
                     <p class="footer-email-addres"><i class="fa-solid fa-envelope"></i> a.dragunov@tdaliance.ru</p>
                 </li>
                 <li class="footer-list-item">
-                    <i class="fa-brands fa-vk"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="https://vkontakte.ru"><i class="fa-brands fa-vk"></i></a>
+                    <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
@@ -348,13 +348,13 @@
             <div class="footer-main">
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item"><span class="footer-main-col1">Контрактное производство</span></li>
+                        <li class="footer-main-list-item1"><span class="footer-main-col1">Контрактное производство</span></li>
                         <li class="footer-main-list-item">Автомобильная химия</li>
                         <li class="footer-main-list-item">Бытовая химия</li>
                         <li class="footer-main-list-item">Дезинфицирующие средства</li>
                     </ul>
                 </div>
-                <div class="footer-main-info">
+                <div class="footer-main-info2">
                     <ul class="footer-main-ul">
                         <li class="footer-main-list-item">Пищевые аэрозоли</li>
                         <li class="footer-main-list-item">Косметическая продукция</li>
@@ -363,27 +363,31 @@
                 </div>
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item"><span class="footer-main-col2">Собственные марки</span></li>
+                        <li class="footer-main-list-item1"><span class="footer-main-col2">Собственные марки</span></li>
                         <li class="footer-main-list-item">Автохимия AG-Tech</li>
                         <li class="footer-main-list-item">Автохимия AP</li>
                     </ul>
                 </div>
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item"><span class="footer-main-col2"><span class="footer-main-spans">О компании</span></span></li>
-                        <li class="footer-main-list-item"><span class="footer-main-spans">Новости</span></li>
-                        <li class="footer-main-list-item"><span class="footer-main-spans">Контакты</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2">О компании</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2">Новости</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2">Контакты</span></li>
                     </ul>
                 </div>
             </div>
         </div>
         <hr class="footer-hr">
-        <div class="footer-last">
-            <div class="footer-last-info">
-                <span class="footer-last-span1"></span>
-                <span class="footer-last-span2"></span>
+        <div class="container">
+            <div class="footer-last">
+                <div class="footer-last-info">
+                    <span class="footer-last-span1">© 2022 «Aliance Production». Все права защищены.</span>
+                    <span class="footer-last-span2">Политики конфиденциальности</span>
+                </div>
+                <div class="footer-last-logo">
+                    <span class="footer-logo-text">Сделано в <img src="./assets/logo-ruso.png" alt=""></span>
+                </div>
             </div>
-            <div class="footer-last-logo"></div>
         </div>
     </section>
 </body>
