--- a/main_page.html
+++ b/main_page.html
@@ -14,6 +14,11 @@
     <section id="hero" class="hero">
         <nav class="hero-navbar">
             <div class="hero-navigation-logo"><img src="./assets/logo.png" alt="" class="hero-logo"></div>
+            <div class="burger-menu" id="burger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="hero-navigation">
                 <ul class="hero-nav-links" id="hero-nav-links">
                     <li><a href="#">О Компании</a></li>
@@ -23,7 +28,6 @@
                     <li><a href="#">Контакты</a></li>
                 </ul>
             </div> 
-            <div class="burger-menu"></div>
             <div class="hero-navigation">
                 <i id="hero-phone" class="fa-solid fa-phone"></i>
                 <a href="#" class="hero-call">+7 (499) 686-10-14</a>
