--- a/contract/index.html
+++ b/contract/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./scss/style.css">
     <title>Document</title>
 </head>
 <body>
-     <section id="hero" class="hero">
+    <section id="hero" class="hero">
         <nav class="hero-navbar">
-            <div class="hero-navigation-logo"><img src="./assets/logo.png" alt="" class="hero-logo"></div>
+            <div class="hero-navigation-logo"><img src="./assets/footer-header-logo.png" alt="" class="hero-logo"></div>
             <div class="hero-navigation">
                 <ul class="hero-nav-links" id="hero-nav-links">
-                    <li><a href="#">О Компании</a></li>
+                    <li><a href="../main_page.html">О Компании</a></li>
                     <li><a href="#">Контрактное производство</a></li>
                     <li><a href="#">Собственные торговые марки</a></li>
                     <li><a href="#">Новости</a></li>
@@ -25,5 +30,53 @@
                 <h5 class="hero-navigation-btn"><a href="#">Получить консультацию</a></h5>
             </div>
         </nav>
+    </section>
+    <section class="single-block">
+        <div class="container">
+            <div class="single-block-elements">
+                <span class="single-block-span"></span>
+                <h1 class="single-block-text">КОНТРАКТНОЕ ПРОИЗВОДСТВО</h1>
+                <a class="single-block-link" href="../main_page.html">Главная - </a><span class="single-block-subtext">Контрактное производство</span>
+            </div>
+        </div>
+    </section>
+    <section class="about-products">
+        <div class="container">
+            <div class="contract-product1">
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Автомобильная химия</h4>
+                    <span class="contract-container-subtext">Безусловно, сплочённость команды <br/>профессионалов позволяет оценить <br/>значение форм воздействия.</span><br/>
+                    <img class="contract-images" src="./assets/auto-chem.png" alt="">
+                </div>
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Бытовая химия</h4>
+                    <span class="contract-container-subtext">А также стремящиеся вытеснить <br />традиционное производство, <br />нанотехнологии функционально <br />разнесены на независимые элементы.</span><br/>
+                    <img src="./assets/bit-him.png" alt="">
+                </div>
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Дезинфицирующие средства</h4>
+                    <span class="contract-container-subtext">Лишь интерактивные прототипы <br />призваны к ответу.</span><br/>
+                    <img src="./assets/dezinf.png" alt="">
+                </div>
+            </div>
+            <div class="contract-product2">
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Пищевые аэрозоли</h4>
+                    <span class="contract-container-subtext">Безусловно, сплочённость команды <br/>профессионалов позволяет оценить <br/>значение форм воздействия.</span><br/>
+                    <img class="contract-images" src="./assets/dezinf.png" alt="">
+                </div>
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Косметическая продукция</h4>
+                    <span class="contract-container-subtext">Лишь интерактивные прототипы <br />призваны к ответу.</span>
+                    <img class="contract-images" src="./assets/auto-chem.png" alt="">
+                </div>
+                <div class="contract-product-block">
+                    <h4 class="contract-container-text">Краски аэрозольные</h4>
+                    <span class="contract-container-subtext">А также стремящиеся вытеснить <br />традиционное производство, <br />нанотехнологии функционально <br />разнесены на независимые элементы.</span><br/>
+                    <img class="contract-images" src="./assets/bit-him.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
