--- a/main_page.html
+++ b/main_page.html
@@ -17,7 +17,7 @@
             <div class="hero-navigation">
                 <ul class="hero-nav-links" id="hero-nav-links">
                     <li><a href="#">О Компании</a></li>
-                    <li><a href="#">Контрактное производство</a></li>
+                    <li><a href="./contract/index.html">Контрактное производство</a></li>
                     <li><a href="#">Собственные торговые марки</a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="#">Контакты</a></li>
