finished contract page but need to put links

--- a/contract/index.html
+++ b/contract/index.html
@@ -76,6 +76,107 @@
                     <img class="contract-images" src="./assets/bit-him.png" alt="">
                 </div>
             </div>
+            <div class="contract-product-seo">
+                <h3 class="seo-text">SEO Заголовок</h3>
+                <p class="seo-subtext">
+                    Также как дальнейшее развитие различных форм деятельности предполагает независимые способы реализации существующих финансовых и административных условий. Каждый<br />
+                    из нас понимает очевидную вещь: курс на социально-ориентированный национальный проект играет важную роль в формировании как самодостаточных, так и внешне<br />
+                    зависимых концептуальных решений. Внезапно, интерактивные прототипы набирают популярность среди определенных слоев населения, а значит, должны быть...
+                </p>
+                <i class="fa-solid fa-rotate-right"> </i><span class="seo-span">  Читать больше</span>
+            </div>
+        </div>
+    </section>
+    <section class="offer">
+        <div class="offer-spray-img">
+            <img src="./assets/spray.png" alt="">
+        </div>
+        <div class="offer-container">
+            <div class="offer-form">
+            <h2 class="offer-text">ХОТИТЕ СОТРУДНИЧАТЬ?</h2>
+            <p class="offer-subtext">
+                Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит<br />
+                на все интересующие вопросы и поможем даже в самых сложных случаях!
+            </p>
+            <input class="offer-input-text" placeholder="Имя" type="text">
+            <input class="offer-input-phone" type="number" name="phone" id="phone" placeholder="+_ (___) __-__-___"><br />
+            <div class="offer-verify">
+                <button class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
+                <span class="offer-verify-text">
+                    <img class="offer-verifie-icon" src="./assets/verified.png" alt="">
+                    Обращаясь к нам вы получаете не только профессиональную<br />
+                    работу, но и абсолютную конфиденциальность информации!
+                </span>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <ul class="footer-ul">
+                <li class="footer-list-item">
+                    <img src="./assets/footer-header-logo.png" alt="">
+                </li>
+                <li class="footer-list-item">
+                    <span class="footer-phone-contact">+7 (499) 686-10-14</span>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-addres"><i class="fa-solid fa-location-dot"></i> г. Мосвка, Холодильный пер. 4к1с8</p>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-email-addres"><i class="fa-solid fa-envelope"></i> a.dragunov@tdaliance.ru</p>
+                </li>
+                <li class="footer-list-item">
+                    <a href="https://vkontakte.ru"><i class="fa-brands fa-vk"></i></a>
+                    <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
+        <hr class="footer-hr">
+        <div class="container">
+            <div class="footer-main">
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item1"><span class="footer-main-col1">Контрактное производство</span></li>
+                        <li class="footer-main-list-item">Автомобильная химия</li>
+                        <li class="footer-main-list-item">Бытовая химия</li>
+                        <li class="footer-main-list-item">Дезинфицирующие средства</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info2">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item">Пищевые аэрозоли</li>
+                        <li class="footer-main-list-item">Косметическая продукция</li>
+                        <li class="footer-main-list-item">Краски аэрозольные</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item1"><span class="footer-main-col2">Собственные марки</span></li>
+                        <li class="footer-main-list-item">Автохимия AG-Tech</li>
+                        <li class="footer-main-list-item">Автохимия AP</li>
+                    </ul>
+                </div>
+                <div class="footer-main-info">
+                    <ul class="footer-main-ul">
+                        <li class="footer-main-list-item"><span class="footer-main-col2">О компании</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2">Новости</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2">Контакты</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="footer-hr">
+        <div class="container">
+            <div class="footer-last">
+                <div class="footer-last-info">
+                    <span class="footer-last-span1">© 2022 «Aliance Production». Все права защищены.</span>
+                    <span class="footer-last-span2">Политики конфиденциальности</span>
+                </div>
+                <div class="footer-last-logo">
+                    <span class="footer-logo-text">Сделано в <img src="./assets/logo-ruso.png" alt=""></span>
+                </div>
+            </div>
         </div>
     </section>
 </body>
