--- a/contract/index.html
+++ b/contract/index.html
@@ -16,8 +16,8 @@
             <div class="hero-navigation-logo"><img src="./assets/footer-header-logo.png" alt="" class="hero-logo"></div>
             <div class="hero-navigation">
                 <ul class="hero-nav-links" id="hero-nav-links">
-                    <li><a href="../main_page.html">О Компании</a></li>
-                    <li><a href="#">Контрактное производство</a></li>
+                    <li><a href="#">О Компании</a></li>
+                    <li><a href="./index.html">Контрактное производство</a></li>
                     <li><a href="#">Собственные торговые марки</a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="#">Контакты</a></li>
