--- a/contract/index.html
+++ b/contract/index.html
@@ -18,7 +18,7 @@
                 <ul class="hero-nav-links" id="hero-nav-links">
                     <li><a href="#">О Компании</a></li>
                     <li><a href="./index.html">Контрактное производство</a></li>
-                    <li><a href="#">Собственные торговые марки</a></li>
+                    <li><a href="../our-product/index.html">Собственные торговые марки</a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
