created blog page

--- a/main_page.html
+++ b/main_page.html
@@ -19,7 +19,7 @@
                     <li><a href="#">О Компании</a></li>
                     <li><a href="./contract/index.html">Контрактное производство</a></li>
                     <li><a href="./our-product/index.html">Собственные торговые марки</a></li>
-                    <li><a href="#">Новости</a></li>
+                    <li><a href="./blog/index.html">Новости</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
             </div> 
