--- a/contacs/index.html
+++ b/contacs/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./scss/style.css">
-    <title>Our-product</title>
+    <title>Document</title>
 </head>
 <body>
     <section id="hero" class="hero">
@@ -18,9 +18,9 @@
                 <ul class="hero-nav-links" id="hero-nav-links">
                     <li><a href="#">О Компании</a></li>
                     <li><a href="../contract/index.html">Контрактное производство</a></li>
-                    <li><a href="./index.html">Собственные торговые марки</a></li>
+                    <li><a href="../contract/index.html">Собственные торговые марки</a></li>
                     <li><a href="#">Новости</a></li>
-                    <li><a href="../contacs/index.html">Контакты</a></li>
+                    <li><a href="./index.html">Контакты</a></li>
                 </ul>
             </div> 
             <div class="burger-menu"></div>
@@ -31,59 +31,61 @@
             </div>
         </nav>
     </section>
-    <section class="single-block">
+     <section class="single-block">
         <div class="container">
             <div class="single-block-elements">
                 <span class="single-block-span"></span>
-                <h1 class="single-block-text">СОБСТВЕННЫЕ ТОРГОВЫЕ МАРКИ</h1>
-                <a class="single-block-link" href="../main_page.html">Главная - </a><span class="single-block-subtext">Собственные торговые марки</span>
+                <h1 class="single-block-text">КОНТАКТЫ</h1>
+                <a class="single-block-link" href="../main_page.html">Главная - </a><span class="single-block-subtext">  Контакты</span>
             </div>
         </div>
     </section>
-    <section class="mark">
+    <section class="contact-info">
         <div class="container">
-            <div class="mark-sections">
-                <div class="mark-left-side">
-                    <div>
-                        <img src="./assets/mark-left-log.png" alt="">
-                    </div>
-                    <div>
-                        <h3 class="mark-left-side-text">Автохимия AG-Tech</h3>
-                        <span class="mark-left-side-subtext">Для современного мира разбавленное <br />изрядной долей эмпатии, рациональное <br />мышление создаёт предпосылки для <br />поставленных обществом задач.</span>
-                    </div>
-                </div>
-                <div class="mark-right-side">
-                    <div><img src="./assets/mark-right-logo.png" alt=""></div>
-                    <div>
-                        <h3 class="mark-right-side-text">Автохимия AP</h3>
-                        <span class="mark-right-side-subtext">Для современного мира разбавленное <br />изрядной долей эмпатии, рациональное <br />мышление создаёт предпосылки для <br />поставленных обществом задач.</span>
-                    </div>
-                </div>
-            </div>
+            <ul class="footer-ul">
+                <li class="footer-list-item">
+                    <span class="footer-phone-contact">+7 (499) 686-10-14</span>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-addres"><i class="fa-solid fa-location-dot"></i> г. Мосвка, Холодильный пер. 4к1с8</p>
+                </li>
+                <li class="footer-list-item">
+                    <p class="footer-email-addres"><i class="fa-solid fa-envelope"></i> a.dragunov@tdaliance.ru</p>
+                </li>
+                <li class="footer-list-item">
+                    <a href="https://vkontakte.ru"><i class="fa-brands fa-vk"></i></a>
+                    <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+            </ul>
         </div>
     </section>
-    <section class="offer">
+    <section class="map">
+        <div class="container">
+            <img class="map-img" src="./assets/map.png" alt="">
+        </div>
+    </section>
+     <section class="offer">
         <div class="offer-spray-img">
             <img src="./assets/spray.png" alt="">
         </div>
         <div class="offer-container">
             <div class="offer-form">
-                <h2 class="offer-text">ХОТИТЕ СОТРУДНИЧАТЬ?</h2>
-                <p class="offer-subtext">
-                    Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит<br />
-                    на все интересующие вопросы и поможем даже в самых сложных случаях!
-                </p>
-                <input class="offer-input-text" placeholder="Имя" type="text">
-                <input class="offer-input-phone" type="number" name="phone" id="phone" placeholder="+_ (___) __-__-___"><br />
-                <div class="offer-verify">
-                    <button class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
-                    <span class="offer-verify-text">
-                        <img class="offer-verifie-icon" src="./assets/verified.png" alt="">
-                        Обращаясь к нам вы получаете не только профессиональную<br />
-                        работу, но и абсолютную конфиденциальность информации!
-                    </span>
-                </div>
+            <h2 class="offer-text">ХОТИТЕ СОТРУДНИЧАТЬ?</h2>
+            <p class="offer-subtext">
+                Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит<br />
+                на все интересующие вопросы и поможем даже в самых сложных случаях!
+            </p>
+            <input class="offer-input-text" placeholder="Имя" type="text">
+            <input class="offer-input-phone" type="number" name="phone" id="phone" placeholder="+_ (___) __-__-___"><br />
+            <div class="offer-verify">
+                <button class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
+                <span class="offer-verify-text">
+                    <img class="offer-verifie-icon" src="./assets/verified.png" alt="">
+                    Обращаясь к нам вы получаете не только профессиональную<br />
+                    работу, но и абсолютную конфиденциальность информации!
+                </span>
             </div>
+        </div>
         </div>
     </section>
     <section class="footer">
