--- a/our-product/index.html
+++ b/our-product/index.html
@@ -20,7 +20,7 @@
                     <li><a href="../contract/index.html">Контрактное производство</a></li>
                     <li><a href="./index.html">Собственные торговые марки</a></li>
                     <li><a href="../blog/index.html">Новости</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="../contacs/index.html">Контакты</a></li>
                 </ul>
             </div> 
             <div class="burger-menu"></div>
