changed media elements

--- a/main_page.html
+++ b/main_page.html
@@ -102,12 +102,12 @@
                 </div>
                 </div>
             </div>
-            <div class="container-block-2">
+            <div id="container-block-2" class="container-block-2">
                 <span class="contract-hr"></span>
                 <h3 class="contract-text">
                     КОНТРАКТНОЕ ПРОИЗВОДСТВО
                 </h3>
-                <div class="contract-product1">
+                <div id="contract-product-1" class="contract-product1">
                     <div class="contract-product-block">
                         <h4 class="contract-container-text">Автомобильная химия</h4>
                         <span class="contract-container-subtext">Безусловно, сплочённость команды <br/>профессионалов позволяет оценить <br/>значение форм воздействия.</span><br/>
@@ -124,7 +124,7 @@
                         <img src="./assets/dezinf.png" alt="">
                     </div>
                 </div>
-                 <div class="contract-product2">
+                 <div id="contract-product-2" class="contract-product2">
                     <div class="contract-product-block">
                         <h4 class="contract-container-text">Пищевые аэрозоли</h4>
                         <span class="contract-container-subtext">Безусловно, сплочённость команды <br/>профессионалов позволяет оценить <br/>значение форм воздействия.</span><br/>
