changed media responsive at hero and contract pages

--- a/main_page.html
+++ b/main_page.html
@@ -36,7 +36,7 @@
                     
                 </div> 
                 <div class="hero-text">
-                    <span class="hero-main-text">Комплексное обеспечение товарами <br />и расходными материалами бизнеса</span>
+                    <span id="hero-main-text" class="hero-main-text">Комплексное обеспечение товарами <br />и расходными материалами бизнеса</span>
                     <span class="hero-subtext">
                         Высокий уровень вовлечения представителей целевой аудитории является четким <br />
                         доказательством простого факта: высококачественный прототип будущего проекта <br />
@@ -144,14 +144,14 @@
             </div>
         </div>
     </section>
-    <section class="mark">
+    <section id="mark" class="mark">
         <div class="container">
             <div class="mark-element">
                 <span class="mark-element-hr"></span>
                 <h2 class="mark-element-text">СОБСТВЕННЫЕ ТОРГОВЫЕ МАРКИ</h2>
             </div>
-            <div class="mark-sections">
-                <div class="mark-left-side">
+            <div id="mark-sections" class="mark-sections">
+                <div id="mark-left-side" class="mark-left-side">
                     <div>
                         <img src="./assets/mark-left-log.png" alt="">
                     </div>
@@ -160,7 +160,7 @@
                         <span class="mark-left-side-subtext">Для современного мира разбавленное <br />изрядной долей эмпатии, рациональное <br />мышление создаёт предпосылки для <br />поставленных обществом задач.</span>
                     </div>
                 </div>
-                <div class="mark-right-side">
+                <div id="mark-right-side" class="mark-right-side">
                     <div><img src="./assets/mark-right-logo.png" alt=""></div>
                     <div>
                         <h3 class="mark-right-side-text">Автохимия AP</h3>
@@ -170,10 +170,10 @@
             </div>
         </div>
     </section>
-    <section class="mission">
-       <div class="mission-block">
+    <section id="mission" class="mission">
+       <div id="mission-block" class="mission-block">
             <div class="mission-left-side">
-                <img class="mission-person" src="./assets/mission-person.png" alt="">
+                <img id="mission-person" class="mission-person" src="./assets/mission-person.png" alt="">
             </div>
             <div class="mission-right-side">
                 <span class="mission-right-hr"></span>
@@ -199,11 +199,11 @@
     </section>
     <section class="partner">
         <div class="container">
-            <div class="partner-elements">
+            <div id="partner-elements" class="partner-elements">
                 <div class="partner-left-side">
                     <span class="partner-hr"></span>
                     <h2 class="partner-text">ПРОИЗВОДИМ АЭРОЗОЛЬНУЮ <br />ПРОДУКЦИЮ ДЛЯ РАЗНЫХ СФЕР</h2>
-                    <div class="partner-item">
+                    <div id="partner-item" class="partner-item">
                         <ul class="partner-ul-left">
                             <li class="partner-list-item">
                                 <i class="fa fa-flask" aria-hidden="true"></i><p>Химические производства</p>
@@ -247,18 +247,14 @@
                         <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
                     </div>
                     <div class="partner-burger-icon">
-                        <div class="partner-burger-icon">
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                        </div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
                     </div>
                     <div class="partner-burger-icon">
-                        <div class="partner-burger-icon">
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                            <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
-                        </div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
+                        <div class="partner-img"><img src="./assets/Burger-black.png" alt="" class="partner-burger-img hover-img"></div>
                     </div>
                 </div>
             </div>
@@ -276,7 +272,7 @@
                         непростую экономическую ситуацию, в равной степени предоставлены...
                     </p>
                 </div>
-                <div class="blog-right-side">
+                <div id="blog-right-side" class="blog-right-side">
                     <h3 class="blog-right-text">Сложно сказать, почему жизнь прекрасна</h3>
                     <p class="blog-right-subtext">
                         Сложно сказать, почему элементы политического процесса функционально<br />
@@ -297,8 +293,8 @@
         <div class="offer-spray-img">
             <img src="./assets/spray.png" alt="">
         </div>
-        <div class="offer-container">
-            <div class="offer-form">
+        <div id="offer-container" class="offer-container">
+            <div id="offer-form" class="offer-form">
             <h2 class="offer-text">ХОТИТЕ СОТРУДНИЧАТЬ?</h2>
             <p class="offer-subtext">
                 Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время ответит<br />
@@ -306,8 +302,8 @@
             </p>
             <input class="offer-input-text" placeholder="Имя" type="text">
             <input class="offer-input-phone" type="number" name="phone" id="phone" placeholder="+_ (___) __-__-___"><br />
-            <div class="offer-verify">
-                <button class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
+            <div id="offer-verify" class="offer-verify">
+                <button id="offer-submit-btn" class="offer-submit-btn" type="submit" value="submit">Отправить заявку</button>
                 <span class="offer-verify-text">
                     <img class="offer-verifie-icon" src="./assets/verified.png" alt="">
                     Обращаясь к нам вы получаете не только профессиональную<br />
