--- a/contacs/index.html
+++ b/contacs/index.html
@@ -60,8 +60,8 @@
         </div>
     </section>
     <section class="map">
-        <div class="container">
-            <img class="map-img" src="./assets/map.png" alt="">
+        <div id="container" class="container">
+            <img id="map-img" class="map-img" src="./assets/map.png" alt="">
         </div>
     </section>
      <section class="offer">
