changed to index html

--- a/contacs/index.html
+++ b/contacs/index.html
@@ -44,7 +44,7 @@
             <div class="single-block-elements">
                 <span class="single-block-span"></span>
                 <h1 class="single-block-text">КОНТАКТЫ</h1>
-                <a class="single-block-link" href="../main_page.html">Главная - </a><span class="single-block-subtext">  Контакты</span>
+                <a class="single-block-link" href="../index.html">Главная - </a><span class="single-block-subtext">  Контакты</span>
             </div>
         </div>
     </section>
@@ -113,7 +113,7 @@
                 </li>
                 <li class="footer-list-item">
                     <a href="https://vkontakte.ru"><i class="fa-brands fa-vk"></i></a>
-                    <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
@@ -122,31 +122,31 @@
             <div class="footer-main">
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item1"><span class="footer-main-col1">Контрактное производство</span></li>
-                        <li class="footer-main-list-item">Автомобильная химия</li>
-                        <li class="footer-main-list-item">Бытовая химия</li>
-                        <li class="footer-main-list-item">Дезинфицирующие средства</li>
+                        <li class="footer-main-list-item1"><span class="footer-main-col1"><a href="./blog/index.html" style="color: rgba(130, 138, 153, 1); text-decoration: none;"></a>Контрактное производство</span></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Автомобильная химия</a></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Бытовая химия</a></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Дезинфицирующие средства</a></li>
                     </ul>
                 </div>
                 <div class="footer-main-info2">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item">Пищевые аэрозоли</li>
-                        <li class="footer-main-list-item">Косметическая продукция</li>
-                        <li class="footer-main-list-item">Краски аэрозольные</li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Пищевые аэрозоли</a></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Косметическая продукция</a></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Краски аэрозольные</a></li>
                     </ul>
                 </div>
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
                         <li class="footer-main-list-item1"><span class="footer-main-col2">Собственные марки</span></li>
-                        <li class="footer-main-list-item">Автохимия AG-Tech</li>
-                        <li class="footer-main-list-item">Автохимия AP</li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Автохимия AG-Tech</a></li>
+                        <li class="footer-main-list-item"><a href="#" style="color: rgba(130, 138, 153, 1); text-decoration: none;">Автохимия AP</a></li>
                     </ul>
                 </div>
                 <div class="footer-main-info">
                     <ul class="footer-main-ul">
-                        <li class="footer-main-list-item"><span class="footer-main-col2">О компании</span></li>
-                        <li class="footer-main-list-item"><span class="footer-main-col2">Новости</span></li>
-                        <li class="footer-main-list-item"><span class="footer-main-col2">Контакты</span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2"><a href="#" style="text-decoration: none; color: black;">О компании</a></span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2"><a href="./blog/index.html" style="color: black; text-decoration: none;">Новости</a></span></li>
+                        <li class="footer-main-list-item"><span class="footer-main-col2"><a href="./contacs/index.html" style="color: black; text-decoration: none;">Контакты</a></span></li>
                     </ul>
                 </div>
             </div>
