--- a/contract/index.html
+++ b/contract/index.html
@@ -44,7 +44,7 @@
             <div class="single-block-elements">
                 <span class="single-block-span"></span>
                 <h1 class="single-block-text">КОНТРАКТНОЕ ПРОИЗВОДСТВО</h1>
-                <a class="single-block-link" href="../main_page.html">Главная - </a><span class="single-block-subtext">Контрактное производство</span>
+                <a class="single-block-link" href="../index.html">Главная - </a><span class="single-block-subtext">Контрактное производство</span>
             </div>
         </div>
     </section>
